# complex-adaptive-systems

./: .gitignore  flake.nix  main.py  pyproject.toml
project/: bunny.py  grid.py  plot.py  project.ipynb  result.py
project-report/: bibliography.bib  main.tex  neurips_2024.sty
week1/: assignment_1.ipynb
week2/: assignment_2.ipynb
week3/: assignment_3.ipynb
week4/: assignment_4.ipynb
week5/: assignment_5.ipynb
week6/: assignment_6.ipynb  ts.npy  ys.npy
week7/: assignment_7.ipynb
