[project]
name = "complex-adaptive-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio[ffmpeg]>=2.37.2",
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "matplotlib>=3.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
