[project]
name = "complex-adaptive-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastplotlib[imgui,notebook]>=0.6.1",
    "imageio[ffmpeg]>=2.37.2",
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "jupyter-rfb>=0.5.4",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.6",
    "opensimplex>=0.4.5.1",
    "simplejpeg>=1.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
